[project]
name = "ctgov-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "genson>=1.3.0",
    "langchain>=0.3.25",
    "openai>=1.80.0",
    "pymongo>=4.13.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "transformers>=4.52.2",
]
