[project]
name = "clinrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses>=0.8",
    "dotenv>=0.9.9",
    "genson>=1.3.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "openai>=1.80.0",
    "pymongo>=4.13.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
    "transformers>=4.52.2",
]
