[project]
name = "clinrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "dataclasses>=0.8",
    "dotenv>=0.9.9",
    "genson>=1.3.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "openai>=1.80.0",
    "pymongo>=4.13.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "transformers>=4.52.2",
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'"}
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
